2012-05-24  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/53465
	* tree-vrp.c (extract_range_from_cond_expr): First copy_value_range
	vr0 into *vr, then vrp_meet that.
	(vrp_meet): If one vr type is VR_UNDEFINED, ensure the result doesn't
	have any equivalences.
	(vrp_visit_phi_node): Call copy_value_range instead of vrp_meet the
	first time.

2012-05-23  Eric Botcazou  <ebotcazou@adacore.com>

	* gimple.c (gimple_types_compatible_p_1) <ARRAY_TYPE>: Remove bogus
	size handling.
	(gimple_canonical_types_compatible_p) <ARRAY_TYPE>: Likewise.
	(iterative_hash_gimple_type): Adjust comment.
	(iterative_hash_canonical_type): Likewise.  Hash the bounds of the
	domain for an array type instead of the domain type itself.

2012-05-23  Georg-Johann Lay  <avr@gjlay.de>

	Backport from 2012-05-23 mainline r187803

	PR target/53448
	* config/avr/avr.h (ASM_OUTPUT_ALIGN): Don't inhibit .p2align 1.
	* config/avr/elf.h (ASM_OUTPUT_BEFORE_CASE_LABEL): Use
	ASM_OUTPUT_ALIGN.

2012-05-23  Ganesh Gopalasubramanian  <Ganesh.Gopalasubramanian@amd.com>

	Backport from 2012-05-03 mainline r187075

	* config/i386/driver-i386.c (host_detect_local_cpu): Reset
	has_fma4 for AMD processors with both fma3 and fma4 support.

2012-05-22  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/53408
	* tree-vect-loop.c (vectorizable_induction): Properly check
	the restriction that we cannot handle induction results from
	the inner loop outside of the outer loop.

2012-05-21  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/53436
	* omp-low.c (omp_build_component_ref): New function.
	(build_receiver_ref, build_sender_ref, create_task_copyfn): Use it.

	PR tree-optimization/53366
	* tree-vect-slp.c (vect_supported_load_permutation_p): Don't shortcut
	tests if complex_numbers == 2, but there are non-complex number loads
	too.

	PR tree-optimization/53409
	* tree-vect-loop.c (vect_analyze_loop_operations): Don't check