@@ -1,3 +1,8 @@
+2012-05-24  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/53460
+	* g++.dg/tree-prof/pr53460.C: New testcase.
+
 2012-05-24  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/53465
