@@ -1,3 +1,9 @@
+2012-05-24  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/53460
+	* tree-profile.c (tree_profiling): Cleanup the CFG if
+	execute_fixup_cfg requests it.
+
 2012-05-24  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/53465
